code25_all/scala/15026677.txt
def df(f: Float => Float, dt: Float) = (t: Float) => f(t + dt) - f(t)

def df[T](f: T => T, dt: T) = (t: T) => f(t + dt) - f(t)

def df[T <: Double](f: T => T, dt: T) = (t: T) => f(t + dt) - f(t)

scala> def df[T <: Double](f: T => T, dt: T) = (t: T) => f(t + dt) - f(t)
<console>:7: error: type mismatch;
 found   : Double
 required: T
       def df[T <: Double](f: T => T, dt: T) = (t: T) => f(t + dt) - f(t)
                                                             ^

